--- a/app/src/main/res/layout/fragment_create_blog_pro.xml
+++ b/app/src/main/res/layout/fragment_create_blog_pro.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".pages.fragment.CreateBlogProFragment">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editText_markdown"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Professional Mode" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:gravity="top"
+        android:padding="16dp"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/editText_preview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:gravity="top"
+        android:padding="16dp"/>
+</LinearLayout>
