--- a/app/src/main/res/layout/activity_create_blog.xml
+++ b/app/src/main/res/layout/activity_create_blog.xml
@@ -6,18 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".pages.activity.CreateBlogActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/create_blog_nav"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:menu="@menu/nav_add_blog" />
+        android:layout_height="54dp"
+        android:elevation="0dp"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/edit_title"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24sp"
+                android:layout_centerVertical="true"
+                android:hint="请输入标题"
+                android:padding="4dp"
+                android:background="@color/transparent"
+                android:inputType="text"
+                android:maxLines="1"/>
+            <EditText
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/edit_title"
+                android:gravity="center"
+                android:layout_marginStart="12sp"
+                android:layout_centerVertical="true"
+                android:hint="默认"
+                android:padding="4dp"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:background="@drawable/border_capsule_black_32dp"
+                android:inputType="text"
+                android:maxLines="1"/>
+            <TextView
+                android:id="@+id/label_edit_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/btn_submit"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="24dp"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+            <Button
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:id="@+id/btn_submit"
+                android:background="@drawable/ic_check_white_128dp" />
+        </RelativeLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <tty.community.widget.ViewPager
         android:id="@+id/create_blog_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/create_blog_nav" />
+        android:layout_below="@id/app_bar"/>
 
 
 </RelativeLayout>
