--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:id="@+id/main_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="tty.community.pages.activity.MainActivity">
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -75,14 +77,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/main_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/main_nav"
             android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_add" />
+            app:fab_addButtonColorNormal="@color/colorPrimary"
+            app:fab_addButtonPlusIconColor="@color/white"
+            app:fab_addButtonSize="normal">
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_add_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_size="normal"
+                app:fab_icon="@drawable/ic_text_white_64dp"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_add_richText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_rich_text_white_64dp"
+                app:fab_size="normal"/>
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_add_markdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_markdown_white_64dp"
+                app:fab_size="normal"/>
+
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
