--- a/app/src/main/res/layout/fragment_create_blog_short.xml
+++ b/app/src/main/res/layout/fragment_create_blog_short.xml
@@ -5,45 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".pages.fragment.CreateBlogShortFragment">
 
-    <EditText
-        android:id="@+id/create_blog_short_tag"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/border"
-        android:hint="TAG"
-        android:inputType="text"
-        android:maxLines="1"
-        android:padding="4dp" />
 
     <EditText
         android:id="@+id/create_blog_short_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/create_blog_short_images"
-        android:layout_below="@id/create_blog_short_tag"
-        android:layout_margin="8dp"
-        android:background="@drawable/border"
+
+        android:background="@color/transparent"
         android:gravity="top"
-        android:hint="在这里输入..."
+        android:hint="请输入内容"
         android:inputType="textMultiLine"
-        android:padding="8dp" />
+        android:padding="16dp"
+        android:textSize="16sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/create_blog_short_images"
+        android:background="@color/gray"
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:layout_above="@id/create_blog_short_submit" />
+        android:layout_alignParentBottom="true" />
 
-    <Button
-        android:id="@+id/create_blog_short_submit"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="8dp"
-        android:background="@drawable/border"
-        android:text="Submit" />
 
 </RelativeLayout>
