--- a/app/src/main/res/layout/item_blog_outline.xml
+++ b/app/src/main/res/layout/item_blog_outline.xml
@@ -95,6 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginStart="4dp"
             android:maxLines="1"
             android:text="TITLE"
             android:textColor="@color/black"
@@ -103,7 +104,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border_light"
             android:orientation="horizontal">
 
