--- a/app/src/main/res/layout/activity_change_info.xml
+++ b/app/src/main/res/layout/activity_change_info.xml
@@ -185,6 +185,7 @@
                 android:visibility="gone" />
             
             <LinearLayout
+                android:layout_marginBottom="16dp"
                 android:id="@+id/layout_signature"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
