--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,134 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".pages.activity.LoginActivity">
 
-    <ImageView
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@null"
-        app:srcCompat="@drawable/ic_user_gray_64dp" />
-
     <LinearLayout
+        android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/account_linearlayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
-            android:background="@drawable/border"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/login_method"
-                android:layout_width="96dp"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:text="用 户 名"
-                android:textSize="20sp" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#999999" />
-
-            <EditText
-                android:id="@+id/login_account"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="2dp"
-                android:background="#00ffffff"
-                android:importantForAutofill="no"
-                android:inputType="text"
-                android:maxLines="1"
-                android:padding="5dp"
-                android:text="" />
-        </LinearLayout>
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_user_gray_64dp" />
 
         <LinearLayout
-            android:id="@+id/password_linearlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="36dp"
-            android:background="@drawable/border"
-            android:gravity="center">
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/account_linearlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/border"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/login_method"
+                    android:layout_width="96dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:text="用 户 名"
+                    android:textSize="20sp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#999999" />
+
+                <EditText
+                    android:id="@+id/login_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_margin="2dp"
+                    android:background="#00ffffff"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:padding="5dp"
+                    android:text="" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/password_linearlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="36dp"
+                android:background="@drawable/border"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="96dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:text="密    码"
+                    android:textSize="20sp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#999999" />
+
+                <EditText
+                    android:id="@+id/login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_margin="2dp"
+                    android:background="#00ffffff"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:padding="5dp" />
+            </LinearLayout>
 
             <TextView
-                android:layout_width="96dp"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:text="密    码"
-                android:textSize="20sp" />
+                android:id="@+id/login_change_method"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="12dp"
+                android:background="@color/transparent"
+                android:padding="4dp"
+                android:text="切换登录方式"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#999999" />
-
-            <EditText
-                android:id="@+id/login_password"
+            <RelativeLayout
+                android:layout_marginBottom="32dp"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="2dp"
-                android:background="#00ffffff"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:padding="5dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp">
+
+                <Button
+                    android:id="@+id/login_register_btn"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentStart="true"
+                    android:background="@drawable/border"
+                    android:text="注    册"
+                    android:textSize="18sp" />
+
+                <Button
+                    android:id="@+id/login_btn"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/border"
+                    android:text="登    录"
+                    android:textSize="18sp" />
+            </RelativeLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/login_change_method"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="12dp"
-            android:background="@color/transparent"
-            android:padding="4dp"
-            android:text="切换登录方式"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-
-            <Button
-                android:id="@+id/login_register_btn"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_alignParentStart="true"
-                android:background="@drawable/border"
-                android:text="注    册"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/login_btn"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/border"
-                android:text="登    录"
-                android:textSize="18sp" />
-        </RelativeLayout>
     </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
