--- a/app/src/main/res/layout/item_blog_outline.xml
+++ b/app/src/main/res/layout/item_blog_outline.xml
@@ -95,7 +95,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="4dp"
             android:maxLines="1"
             android:text="TITLE"
             android:textColor="@color/black"
@@ -122,7 +121,7 @@
                 android:visibility="gone"
                 android:padding="4dp"
                 android:layout_width="wrap_content"
-                android:layout_height="108dp"/>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
 
