--- a/app/src/main/res/layout/item_pic.xml
+++ b/app/src/main/res/layout/item_pic.xml
@@ -5,10 +5,11 @@
 
     <ImageView
         android:id="@+id/item_img"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="8dp"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_margin="2dp"
         android:background="@drawable/border"
-        android:src="@drawable/ic_add_gray" />
+        android:src="@drawable/ic_add_gray"
+        android:contentDescription="@null" />
 
 </LinearLayout>
