--- a/app/src/main/res/layout/activity_create_blog.xml
+++ b/app/src/main/res/layout/activity_create_blog.xml
@@ -27,19 +27,20 @@
                 android:background="@color/transparent"
                 android:inputType="text"
                 android:maxLines="1"/>
-            <EditText
-                android:layout_width="80dp"
+            <TextView
+                android:id="@+id/create_blog_choose_topic"
+                android:layout_width="128dp"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/edit_title"
+                android:layout_toEndOf="@id/edit_title"
                 android:gravity="center"
                 android:layout_marginStart="12sp"
                 android:layout_centerVertical="true"
-                android:hint="默认"
+                android:text="ALL"
+                android:ellipsize="end"
                 android:padding="4dp"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_capsule_black_32dp"
-                android:inputType="text"
                 android:maxLines="1"/>
             <TextView
                 android:id="@+id/label_edit_type"
